--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build-react": "pnpm --filter @chroma/react build",
     "build": "pnpm build-bridge && pnpm build-core && pnpm build-manifest && pnpm build-react",
     "dev": "pnpm --filter @chroma/core dev & pnpm --filter @chroma/manifest dev & pnpm --filter @chroma/react dev",
-    "lint": "eslint . --ext .ts,.tsx --max-warnings 0",
+    "lint": "eslint packages/ --ext .js,.mjs",
     "format": "prettier --write .",
     "demo:dev": "vite --config demo/vite.config.ts",
     "test": "vitest run",
@@ -51,7 +51,7 @@
     "rollup-plugin-dts": "^6.2.1"
   },
   "lint-staged": {
-    "*.{ts,tsx,js,jsx}": [
+    "packages/**/*.{js,mjs}": [
       "eslint --fix"
     ],
     "*.{json,md,yml,yaml}": [
