fix: update release commit messages to follow conventional commits
- Change commit messages from 'Release:' to 'chore:' format
- Add 'release' as valid commit type in commitlint config
- Add bypass for automated release commits in commit-msg hook
- Ensure release workflows pass commitlint validation

--- a/.github/workflows/manual-release.yml
+++ b/.github/workflows/manual-release.yml
@@ -64,5 +64,5 @@ jobs:
       - name: Create Git tags and push
         run: |
           git add .
-          git commit -m "Release: version packages" || exit 0
+          git commit -m "chore: release packages" || exit 0
           git push
