--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,8 +67,8 @@ jobs:
         uses: changesets/action@v1
         with:
           publish: pnpm release
-          title: 'Release: version packages'
-          commit: 'Release: version packages'
+          title: 'chore: release packages'
+          commit: 'chore: release packages'
           createGithubReleases: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
