refactor: remove changesets and simplify release workflow
- Remove changeset dependencies and configuration
- Simplify release workflow to manual version input
- Update release documentation
- Use direct pnpm version and publish commands

--- a/package.json
+++ b/package.json
@@ -12,14 +12,10 @@
     "format": "prettier --write .",
     "demo:dev": "vite --config demo/vite.config.ts",
     "test": "vitest run",
-    "changeset": "changeset",
-    "version-packages": "changeset version",
-    "release": "pnpm build && changeset publish",
+    "release": "pnpm build && pnpm publish -r",
     "prepare": "husky"
   },
   "devDependencies": {
-    "@changesets/changelog-github": "^0.5.1",
-    "@changesets/cli": "^2.29.5",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/eslintrc": "^3.3.1",
