--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,12 @@ name: Release
 
 on:
   workflow_dispatch:
+    inputs:
+      version:
+        description: 'Release version (e.g., patch, minor, major, or specific version like 1.2.3)'
+        required: true
+        default: 'patch'
+        type: string
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -13,8 +19,6 @@ jobs:
     permissions:
       contents: write
       packages: write
-      pull-requests: write
-      issues: write
       id-token: write
 
     steps:
@@ -62,21 +66,40 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
 
-      - name: Create Release Pull Request or Publish
-        id: changesets
-        uses: changesets/action@v1
-        with:
-          publish: pnpm release
-          title: 'chore: release packages'
-          commit: 'chore: release packages'
-          createGithubReleases: true
+      - name: Version packages
+        run: |
+          pnpm --filter "@chroma/*" version ${{ github.event.inputs.version }}
+
+      - name: Commit version changes
+        run: |
+          git add .
+          git commit -m "chore: release version ${{ github.event.inputs.version }}" || echo "No changes to commit"
+
+      - name: Create git tag
+        id: get-version
+        run: |
+          VERSION=$(node -p "require('./packages/core/package.json').version")
+          git tag "v$VERSION"
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "Created tag v$VERSION"
+
+      - name: Push changes and tags
+        run: |
+          git push origin main
+          git push origin --tags
+
+      - name: Publish to npm
+        run: pnpm publish -r --access public
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-      - name: Send notification on success
-        if: steps.changesets.outputs.published == 'true'
-        run: |
-          echo "Packages published successfully!"
-          echo "Published packages: ${{ steps.changesets.outputs.publishedPackages }}"
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: v${{ steps.get-version.outputs.version }}
+          name: Release v${{ steps.get-version.outputs.version }}
+          draft: false
+          prerelease: false
+          generate_release_notes: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
