chore: mark cli package as private to prevent accidental publishing

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,4 +1,5 @@
 {
+  "private": true,
   "name": "@chroma/cli",
   "version": "0.1.0",
   "description": "Scaffold and manage Chroma-powered browser extensions",
