--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "private": true,
   "packageManager": "pnpm@10.12.1",
   "scripts": {
-    "build-core": "pnpm --filter @chroma/core build",
-    "build-manifest": "pnpm --filter @chroma/manifest build",
-    "build-react": "pnpm --filter @chroma/react build",
+    "build-core": "pnpm --filter @chromahq/core build",
+    "build-manifest": "pnpm --filter @chromahq/manifest build",
+    "build-react": "pnpm --filter @chromahq/react build",
     "build": "pnpm build-core && pnpm build-manifest && pnpm build-react",
-    "dev": "pnpm --filter @chroma/core dev & pnpm --filter @chroma/manifest dev & pnpm --filter @chroma/react dev",
+    "dev": "pnpm --filter @chromahq/core dev & pnpm --filter @chromahq/manifest dev & pnpm --filter @chromahq/react dev",
     "lint": "eslint packages/ --ext .js,.mjs",
     "format": "prettier --write .",
     "demo:dev": "vite --config demo/vite.config.ts",
