--- a/packages/manifest/package.json
+++ b/packages/manifest/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@chroma/manifest",
+  "name": "@chromahq/manifest",
   "version": "0.0.1",
   "description": "Manifest generation and build tooling for Chroma Chrome extensions",
   "type": "module",
