--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@chroma/react",
+  "name": "@chromahq/react",
   "version": "0.0.1",
   "description": "React bindings for the Chroma Chrome extension framework",
   "main": "dist/index.js",
