--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,9 +52,7 @@ jobs:
 
       - name: Build packages
         run: |
-          pnpm build-core
-          pnpm build-manifest
-          pnpm build-react
+          pnpm run build
 
   build:
     runs-on: ubuntu-latest
