fix: Update usage of inversify

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -4,8 +4,8 @@
     "module": "ESNext",
     "moduleResolution": "Node",
     "strict": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
+    "experimentalDecorators": false,
+    "emitDecoratorMetadata": false,
     "declaration": true,
     "emitDeclarationOnly": true,
     "sourceMap": true,
