--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,6 +14,11 @@
       "import": "./dist/index.es.js",
       "require": "./dist/index.cjs.js",
       "types": "./dist/index.d.ts"
+    },
+    "./boot": {
+      "import": "./dist/boot.es.js",
+      "require": "./dist/boot.cjs.js",
+      "types": "./dist/boot.d.ts"
     }
   },
   "publishConfig": {
@@ -37,18 +42,28 @@
   "bugs": {
     "url": "https://github.com/chromaHQ/chroma/issues"
   },
+  "peerDependencies": {
+    "@inversifyjs/common": "^1.5.2",
+    "@inversifyjs/container": "^1.12.7",
+    "@inversifyjs/core": "^8.0.0",
+    "reflect-metadata": "^0.2.0"
+  },
   "dependencies": {
     "@types/chrome": "^0.0.326",
     "cron-parser": "^5.3.0",
-    "cron-schedule": "^5.0.4",
-    "inversify": "^7.5.2"
+    "cron-schedule": "^5.0.4"
   },
   "devDependencies": {
+    "@inversifyjs/common": "^1.5.2",
+    "@inversifyjs/container": "^1.12.7",
+    "@inversifyjs/core": "^8.0.0",
+    "reflect-metadata": "^0.2.0",
     "@rollup/plugin-typescript": "^12.1.3",
+    "@types/reflect-metadata": "^0.1.0",
     "vitest": "^1"
   },
   "scripts": {
-    "build": "rollup -c ../../rollup.config.base.mjs",
-    "dev": "rollup -c ../../rollup.config.base.mjs --watch"
+    "build": "rollup -c ./rollup.config.mjs",
+    "dev": "rollup -c ./rollup.config.mjs --watch"
   }
 }
