--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -43,24 +43,24 @@
     "url": "https://github.com/chromaHQ/chroma/issues"
   },
   "peerDependencies": {
-    "@inversifyjs/common": "^1.5.2",
-    "@inversifyjs/container": "^1.12.7",
-    "@inversifyjs/core": "^8.0.0",
-    "reflect-metadata": "^0.2.0"
+    "@inversifyjs/common": "1.5.2",
+    "@inversifyjs/container": "1.13.0",
+    "@inversifyjs/core": "9.0.0",
+    "reflect-metadata": "0.2.2"
   },
   "dependencies": {
-    "@types/chrome": "^0.0.326",
-    "cron-parser": "^5.3.0",
-    "cron-schedule": "^5.0.4"
+    "@types/chrome": "0.0.326",
+    "cron-parser": "5.3.0",
+    "cron-schedule": "5.0.4"
   },
   "devDependencies": {
-    "@inversifyjs/common": "^1.5.2",
-    "@inversifyjs/container": "^1.12.7",
-    "@inversifyjs/core": "^8.0.0",
-    "reflect-metadata": "^0.2.0",
-    "@rollup/plugin-typescript": "^12.1.3",
-    "@types/reflect-metadata": "^0.1.0",
-    "vitest": "^1"
+    "@inversifyjs/common": "1.5.2",
+    "@inversifyjs/container": "1.13.0",
+    "@inversifyjs/core": "9.0.0",
+    "reflect-metadata": "0.2.0",
+    "@rollup/plugin-typescript": "12.1.3",
+    "@types/reflect-metadata": "0.2.2",
+    "vitest": "1"
   },
   "scripts": {
     "build": "rollup -c ./rollup.config.mjs",
