--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,4 +1,15 @@
 packages:
-  - 'packages/*'
-  - 'demo'
-  - 'wallet'
+  - packages/*
+  - demo
+  - wallet
+
+overrides:
+  esbuild@<=0.24.2: '>=0.25.0'
+  '@eslint/plugin-kit@<0.3.4': '>=0.3.4'
+  vite@<=5.4.19: '>=5.4.20'
+  vite@>=6.0.0 <=6.3.5: '>=6.3.6'
+  vite@>=5.2.6 <=5.4.20: '>=5.4.21'
+  vite@>=6.0.0 <=6.4.0: '>=6.4.1'
+  tmp@<=0.2.3: '>=0.2.4'
+  js-yaml@>=4.0.0 <4.1.1: '>=4.1.1'
+  glob@>=10.2.0 <10.5.0: '>=10.5.0'
